--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 Bank</span>!!!</h1>
     </header>
     <main class="bg-teal-100 mx-auto mt-8 w-3/4 px-8 py-12 rounded">
+        <!-- login form  -->
         <div>
             <h3 class="text-2xl">Please Login</h3>
             <input type="email" name="" id="user-email" placeholder="Please enter your email"
